--- a/public/giris.html
+++ b/public/giris.html
@@ -245,18 +245,27 @@
                         </div>
 
                         <div class="col-lg-6">
-                            <form action="#" class="tm-form tm-register-form">
+                            <form action="#" class="tm-form tm-register-form" id="register-form">
                                 <h4>Üye Ol</h4>
                                 <div class="tm-form-inner">
                                     
-                                    <div class="tm-form-field">
+                                    <div class="tm-form-fieldhalf">
                                         <label for="register-email">Email Adresi</label>
                                         <input type="email" id="register-email" required="required">
                                     </div>
-                                    <div class="tm-form-field">
+                                    <div class="tm-form-fieldhalf">
                                         <label for="register-phone">Telefon</label>
                                         <input type="phone" id="register-phone" required="required">
                                     </div>
+                                    <div class="tm-form-fieldhalf">
+                                        <label for="register-name">Adı</label>
+                                        <input type="name" id="register-name" required="required">
+                                    </div>
+                                    <div class="tm-form-fieldhalf">
+                                        <label for="register-surname">Soyadı</label>
+                                        <input type="surname" id="register-surname" required="required">
+                                    </div>
+                                    
                                     <div class="tm-form-field">
                                         <label for="register-password">Şifre</label>
                                         <input type="password" id="register-password" name="register-pass" required="required">
