--- a/public/giris.html
+++ b/public/giris.html
@@ -278,7 +278,7 @@
                                         
                                         <div>
                                             <input type="checkbox" id="register-terms" name="register-terms">
-                                            <label for="register-terms"><a href="#">Kullanım
+                                            <label for="register-terms"><a href="kullanim-sartlari.html">Kullanım
                                                 ve Gizlilik Politikası </a>şartlarını okudum ve kabul ediyorum. </label>
                                         </div>
                                     </div>
