--- a/public/giris.html
+++ b/public/giris.html
@@ -271,8 +271,8 @@
                                         <input type="password" id="register-password" name="register-pass" required="required">
                                     </div>
                                     <div class="tm-form-field">
-                                        <label for="register-password">Şifreyi Tekrarla</label>
-                                        <input type="password" id="register-password" name="register-pass" required="required">
+                                        <label for="register-password2">Şifreyi Tekrarla</label>
+                                        <input type="password" id="register-password2" name="register-pass" required="required">
                                     </div>
                                     <div class="tm-form-field">
                                         
