--- a/public/giris.html
+++ b/public/giris.html
@@ -185,7 +185,7 @@
                     <div class="row">
 
                         <div class="col-lg-6">
-                            <form action="#" class="tm-form tm-login-form">
+                            <form action="#" class="tm-form tm-login-form" id="login-form">
                                 <h4>Üye Girişi</h4>
                                 <div class="tm-form-inner">
                                     <div class="tm-form-field">
