--- a/public/giris.html
+++ b/public/giris.html
@@ -537,5 +537,6 @@
 
     <!-- template js -->
     <script src="assets/js/entox.js"></script>
+     <script src="assets/js/main.js"></script>
   </body>
 </html>
