--- a/public/giris.html
+++ b/public/giris.html
@@ -190,11 +190,11 @@
                                 <div class="tm-form-inner">
                                     <div class="tm-form-field">
                                         <label for="login-email">Email Adresi</label>
-                                        <input type="email" id="email" required="required">
+                                        <input type="email" id="login-email" required="required">
                                     </div>
                                     <div class="tm-form-field">
                                         <label for="login-password">Şifre</label>
-                                        <input type="password" id="password" required="required">
+                                        <input type="password" id="login-password" required="required">
                                     </div>
                                     
                                     <div class="tm-form-field">
