--- a/public/hesabim.html
+++ b/public/hesabim.html
@@ -146,8 +146,8 @@
             <div class="main-menu-wrapper__right">
               <div class="main-menu-wrapper__search-box-cart-box"></div>
               <div class="main-menu-wrapper__btn-box">
-                <a href="hesabim.html" class="giris-button" id="giris-button">Kaan Doğan</a>
-                <a href="giris.html" class="thm-btn main-menu-wrapper__btn">Çıkış Yap</a>
+                <a href="hesabim.html" class="giris-button" id="login-button">Kaan Doğan</a>
+                <a href="giris.html" class="thm-btn main-menu-wrapper__btn" id="logout-button">Çıkış Yap</a>
               </div>
             </div>
           </div>
