--- a/public/hesabim.html
+++ b/public/hesabim.html
@@ -332,17 +332,14 @@
                                                 <label for="acdetails-lastname">Soyisim</label>
                                                 <input type="text" id="acdetails-lastname">
                                             </div>
+                                            
                                             <div class="tm-form-field tm-form-fieldhalf">
-                                                <label for="acdetails-displayname">Cinsiyet</label>
-                                                <input type="text" id="acdetails-displayname">
-                                            </div>
-                                            <div class="tm-form-field tm-form-fieldhalf">
-                                                <label for="acdetails-displayname">T.C Kimlik Numarası</label>
-                                                <input type="text" id="acdetails-displayname">
-                                            </div>
-                                            <div class="tm-form-field">
                                                 <label for="acdetails-email">Email Addresi</label>
                                                 <input type="email" id="acdetails-email">
+                                            </div>
+                                            <div class="tm-form-field tm-form-fieldhalf">
+                                                <label for="acdetails-phone">Telefon</label>
+                                                <input type="text" id="acdetails-phone">
                                             </div>
                                             <div class="tm-form-field">
                                                 <label for="acdetails-password">Eski Şifre</label>
