--- a/public/hesabim.html
+++ b/public/hesabim.html
@@ -227,8 +227,8 @@
                             <div class="tab-pane fade show active" id="account-dashboard" role="tabpanel"
                                 aria-labelledby="account-dashboard-tab">
                                 <div class="tm-myaccount-dashboard">
-                                    <p>Merhaba <b><p id="name"></p> <p id="surname"></p> </b> <br>
-                                       (<b<p id="name"></p> <p id="surname"></p</b> değil misin? <a href="giris.html">Çıkış Yap
+                                    <p>Merhaba <p id="name">John</p> <p id="surname">Doe</p> </p>
+                                      <p> (<p id="name">John</p> <p id="surname">Doe</p> değil misin? <a href="giris.html">Çıkış Yap
                                             </a>)</p>
                                     <p>Profilinizden rezervasyonlarınızı, favorilerinizi ve hesap bilgilerinizi görebilirsiniz.</p>
                                 </div>
