--- a/public/hesabim.html
+++ b/public/hesabim.html
@@ -227,8 +227,8 @@
                             <div class="tab-pane fade show active" id="account-dashboard" role="tabpanel"
                                 aria-labelledby="account-dashboard-tab">
                                 <div class="tm-myaccount-dashboard">
-                                    <p>Merhaba <p id="name">John</p> <p id="surname">Doe</p> </p>
-                                      <p> (<p id="name">John</p> <p id="surname">Doe</p> değil misin? <a href="giris.html">Çıkış Yap
+                                    <p>Merhaba <span id="name">John</span> <span id="surname">Doe</span> 
+                                      <p> (<span id="name2">John</span> <span id="surname2">Doe</span> değil misin? <a href="giris.html">Çıkış Yap
                                             </a>)</p>
                                     <p>Profilinizden rezervasyonlarınızı, favorilerinizi ve hesap bilgilerinizi görebilirsiniz.</p>
                                 </div>
