--- a/public/hesabim.html
+++ b/public/hesabim.html
@@ -217,7 +217,7 @@
                                     role="tab" aria-controls="account-acdetails" aria-selected="false">Hesap Bilgileri</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="account-logout-tab" href="giris.html" role="tab"
+                                <a class="nav-link" id="logout-button" href="giris.html" role="tab"
                                     aria-controls="account-address" aria-selected="false">Çıkış Yap</a>
                             </li>
                         </ul>
