--- a/public/derbent-kale-2.html
+++ b/public/derbent-kale-2.html
@@ -735,6 +735,7 @@
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
     <script src="assets/js/modernizr.js"></script>
     <script src="assets/vendors/timepicker/timePicker.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 
     <!-- template js -->
