--- a/public/gizlilik.html
+++ b/public/gizlilik.html
@@ -443,6 +443,7 @@ veya gelecekte Kurul&rsquo;un belirleyeceği diğer y&ouml;ntemlerle iletebilirs
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
     <script src="assets/js/modernizr.js"></script>
     <script src="assets/vendors/timepicker/timePicker.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 
     <!-- template js -->
