--- a/public/hakkimizda.html
+++ b/public/hakkimizda.html
@@ -540,6 +540,7 @@ Bursa İznik'te konumlanmaktayız. İstanbul'a yalnızca bir buçuk saat uzaklı
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
     <script src="assets/js/modernizr.js"></script>
     <script src="assets/vendors/timepicker/timePicker.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 
     <!-- template js -->
