--- a/public/kullanim-sartlari.html
+++ b/public/kullanim-sartlari.html
@@ -439,6 +439,7 @@ Yeni kontrat imzalanmamış ancak taşınmazı rezerve etmiş ise; rezerve edild
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
     <script src="assets/js/modernizr.js"></script>
     <script src="assets/vendors/timepicker/timePicker.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 
     <!-- template js -->
