--- a/public/villalar-list-2.html
+++ b/public/villalar-list-2.html
@@ -786,6 +786,7 @@ Vadi Fethiye'nin doğayla iç içe konumlanmış 3+1 villası, taş ve ahşap do
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
     <script src="assets/js/modernizr.js"></script>
     <script src="assets/vendors/timepicker/timePicker.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 
     <!-- template js -->
