--- a/public/villalar.html
+++ b/public/villalar.html
@@ -106,7 +106,7 @@
             <div class="main-menu-wrapper__right">
               
               <div class="main-menu-wrapper__btn-box">
-                <a href="hesabim.html" class="giris-button">Giriş</a>
+                <a href="giris.html" class="giris-button">Giriş</a>
                 <a href="giris.html" class="thm-btn main-menu-wrapper__btn">Kaydol</a>
               </div>
             </div>
