--- a/public/derbent-villas.html
+++ b/public/derbent-villas.html
@@ -707,7 +707,8 @@
     <script src="assets/vendors/jquery-magnific-popup/jquery.magnific-popup.min.js"></script>
     <script src="assets/vendors/wow/wow.js"></script>  
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
-    <script src="assets/js/modernizr.js"></script>
+     <script src="assets/js/modernizr.js"></script></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="assets/js/entox.js"></script>
 
 
