--- a/public/index-v31.html
+++ b/public/index-v31.html
@@ -891,7 +891,8 @@
     <script src="assets/vendors/jarallax/jarallax.min.js"></script>
     <script src="assets/vendors/vegas/vegas.min.js"></script>
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
-    <script src="assets/js/modernizr.js"></script>
+     <script src="assets/js/modernizr.js"></script></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- main js -->
      
     <script src="assets/js/entox.js"></script>
