--- a/public/villalar-list-mugla.html
+++ b/public/villalar-list-mugla.html
@@ -475,7 +475,8 @@ Vadi Fethiye'nin doğayla iç içe konumlanmış 31 villası, taş ve ahşap dok
     <script src="assets/vendors/wow/wow.js"></script>  
     <script src="assets/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
-    <script src="assets/js/modernizr.js"></script>
+     <script src="assets/js/modernizr.js"></script></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="assets/js/entox.js"></script>
     
   </body>
