--- a/public/elbeyli-villas-3.html
+++ b/public/elbeyli-villas-3.html
@@ -710,7 +710,8 @@
     <script src="assets/vendors/jquery-magnific-popup/jquery.magnific-popup.min.js"></script>
     <script src="assets/vendors/wow/wow.js"></script>  
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
-    <script src="assets/js/modernizr.js"></script>
+     <script src="assets/js/modernizr.js"></script></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="assets/js/entox.js"></script>
 
     <script src="https://maps.google.com/maps/api/js?key=AIzaSyATY4Rxc8jNvDpsK8ZetC7JyN4PFVYGCGM"></script>
