--- a/public/giris.html
+++ b/public/giris.html
@@ -521,7 +521,8 @@
     <script src="assets/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
     <script src="assets/vendors/vegas/vegas.min.js"></script>
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
-    <script src="assets/js/modernizr.js"></script>
+     <script src="assets/js/modernizr.js"></script></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="assets/vendors/timepicker/timePicker.js"></script>
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
