--- a/public/hesabim.html
+++ b/public/hesabim.html
@@ -217,7 +217,7 @@
                                     role="tab" aria-controls="account-acdetails" aria-selected="false">Hesap Bilgileri</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="account-logout-tab" href="giris.html" role="tab"
+                                <a class="nav-link" id="logout-button" href="#" role="tab"
                                     aria-controls="account-address" aria-selected="false">Çıkış Yap</a>
                             </li>
                         </ul>
@@ -227,8 +227,8 @@
                             <div class="tab-pane fade show active" id="account-dashboard" role="tabpanel"
                                 aria-labelledby="account-dashboard-tab">
                                 <div class="tm-myaccount-dashboard">
-                                    <p>Merhaba <b>Kaan Doğan </b> <br>
-                                       (<b>Kaan Doğan</b> değil misin? <a href="giris.html">Çıkış Yap
+                                    <p>Merhaba <span id="name">John</span> <span id="surname">Doe</span> 
+                                      <p> (<span id="name2">John</span> <span id="surname2">Doe</span> değil misin? <a href="#" id="logout-button">Çıkış Yap
                                             </a>)</p>
                                     <p>Profilinizden rezervasyonlarınızı, favorilerinizi ve hesap bilgilerinizi görebilirsiniz.</p>
                                 </div>
@@ -332,17 +332,14 @@
                                                 <label for="acdetails-lastname">Soyisim</label>
                                                 <input type="text" id="acdetails-lastname">
                                             </div>
+                                            
                                             <div class="tm-form-field tm-form-fieldhalf">
-                                                <label for="acdetails-displayname">Cinsiyet</label>
-                                                <input type="text" id="acdetails-displayname">
-                                            </div>
-                                            <div class="tm-form-field tm-form-fieldhalf">
-                                                <label for="acdetails-displayname">T.C Kimlik Numarası</label>
-                                                <input type="text" id="acdetails-displayname">
-                                            </div>
-                                            <div class="tm-form-field">
                                                 <label for="acdetails-email">Email Addresi</label>
                                                 <input type="email" id="acdetails-email">
+                                            </div>
+                                            <div class="tm-form-field tm-form-fieldhalf">
+                                                <label for="acdetails-phone">Telefon</label>
+                                                <input type="text" id="acdetails-phone">
                                             </div>
                                             <div class="tm-form-field">
                                                 <label for="acdetails-password">Eski Şifre</label>
@@ -607,7 +604,6 @@
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
      <script src="assets/js/modernizr.js"></script></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="assets/vendors/timepicker/timePicker.js"></script>
 
      <!-- Js Files -->
     <script src="assets/login/js/modernizr-3.6.0.min.js"></script>
