--- a/public/hesabim.html
+++ b/public/hesabim.html
@@ -147,7 +147,7 @@
               
               <div class="main-menu-wrapper__btn-box">
                 <a href="hesabim.html" class="giris-button" id="giris-button">Kaan Doğan</a>
-                <a href="giris.html" class="thm-btn main-menu-wrapper__btn">Çıkış Yap</a>
+                <a href="javascript:void(0)" class="thm-btn main-menu-wrapper__btn logout-button">Çıkış Yap</a>
               </div>
             </div>
           </div>
@@ -217,7 +217,7 @@
                                     role="tab" aria-controls="account-acdetails" aria-selected="false">Hesap Bilgileri</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="logout-button" href="#" role="tab"
+                                <a class="nav-link logout-button"  href="javascript:void(0)" role="tab"
                                     aria-controls="account-address" aria-selected="false">Çıkış Yap</a>
                             </li>
                         </ul>
@@ -228,7 +228,7 @@
                                 aria-labelledby="account-dashboard-tab">
                                 <div class="tm-myaccount-dashboard">
                                     <p>Merhaba <span id="name">John</span> <span id="surname">Doe</span> 
-                                      <p> (<span id="name2">John</span> <span id="surname2">Doe</span> değil misin? <a href="#" id="logout-button">Çıkış Yap
+                                      <p> (<span id="name2">John</span> <span id="surname2">Doe</span> değil misin? <a href="javascript:void(0)" class="logout-button">Çıkış Yap
                                             </a>)</p>
                                     <p>Profilinizden rezervasyonlarınızı, favorilerinizi ve hesap bilgilerinizi görebilirsiniz.</p>
                                 </div>
