--- a/public/index-v31.html
+++ b/public/index-v31.html
@@ -104,7 +104,7 @@
               
               <div class="main-menu-wrapper__btn-box">
                 <a href="giris.html" class="giris-button">Giriş</a>
-                <a href="giris.html" class="thm-btn main-menu-wrapper__btn">Kaydol</a>
+                <a href="giris.html" class="thm-btn main-menu-wrapper__btn reg-button">Kaydol</a>
               </div>
             </div>
           </div>
