--- a/public/villalar-list.html
+++ b/public/villalar-list.html
@@ -104,8 +104,8 @@
             <div class="main-menu-wrapper__right">
               
               <div class="main-menu-wrapper__btn-box">
-                <a href="giris.html" class="giris-button">Giriş</a>
-                <a href="giris.html" class="thm-btn main-menu-wrapper__btn reg-button">Kaydol</a>
+                <a href="hesabim.html" class="giris-button">Giriş</a>
+                <a href="giris.html" class="thm-btn main-menu-wrapper__btn">Kaydol</a>
               </div>
             </div>
           </div>
@@ -220,7 +220,7 @@
                       ><img
                         src="assets/img/icon/property-icon1-3.svg"
                         alt="img"
-                      />Metrekare 100 m² </span
+                      />Metrekare 180 m² </span
                     >
                   </div>
                   <div class="property-btn-wrap">
@@ -331,7 +331,7 @@ Derbent Kale, Bursa’nın İznik ilçesine bağlı Derbent Köyü’nde yer ala
                       ><img
                         src="assets/img/icon/property-icon1-3.svg"
                         alt="img"
-                      />Metrekare 100 m² </span
+                      />Metrekare 180 m² </span
                     >
                   </div>
                   <div class="property-btn-wrap">
@@ -668,21 +668,7 @@ Elbeyli Villas, doğanın kalbinde, taş ve ahşabın sıcak dokusunu modern det
     </div>
     <!-- /.mobile-nav__wrapper -->
 
-    <div class="search-popup">
-      <div class="search-popup__overlay search-toggler"></div>
-      <!-- /.search-popup__overlay -->
-      <div class="search-popup__content">
-        <form action="#">
-          <label for="search" class="sr-only">search here</label
-          ><!-- /.sr-only -->
-          <input type="text" id="search" placeholder="Search Here..." />
-          <button type="submit" aria-label="search submit" class="thm-btn">
-            <i class="icon-magnifying-glass"></i>
-          </button>
-        </form>
-      </div>
-      <!-- /.search-popup__content -->
-    </div>
+    
     <!-- /.search-popup -->
 
     <a href="#" data-target="html" class="scroll-to-target scroll-to-top"
@@ -696,8 +682,7 @@ Elbeyli Villas, doğanın kalbinde, taş ve ahşabın sıcak dokusunu modern det
     <script src="assets/vendors/wow/wow.js"></script>  
     <script src="assets/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
-     <script src="assets/js/modernizr.js"></script></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="assets/js/modernizr.js"></script>
     <script src="assets/js/entox.js"></script>
 
 
