--- a/public/kullanim-sartlari.html
+++ b/public/kullanim-sartlari.html
@@ -106,8 +106,8 @@
             <div class="main-menu-wrapper__right">
               
               <div class="main-menu-wrapper__btn-box">
-                <a href="giris.html" class="giris-button">Giriş</a>
-                <a href="giris.html" class="thm-btn main-menu-wrapper__btn reg-button">Kaydol</a>
+                <a href="hesabim.html" class="giris-button">Giriş</a>
+                <a href="giris.html" class="thm-btn main-menu-wrapper__btn">Kaydol</a>
               </div>
             </div>
           </div>
@@ -375,21 +375,7 @@ Yeni kontrat imzalanmamış ancak taşınmazı rezerve etmiş ise; rezerve edild
     </div>
     <!-- /.mobile-nav__wrapper -->
 
-    <div class="search-popup">
-      <div class="search-popup__overlay search-toggler"></div>
-      <!-- /.search-popup__overlay -->
-      <div class="search-popup__content">
-        <form action="#">
-          <label for="search" class="sr-only">search here</label
-          ><!-- /.sr-only -->
-          <input type="text" id="search" placeholder="Search Here..." />
-          <button type="submit" aria-label="search submit" class="thm-btn">
-            <i class="icon-magnifying-glass"></i>
-          </button>
-        </form>
-      </div>
-      <!-- /.search-popup__content -->
-    </div>
+    
     <!-- /.search-popup -->
 
     <a href="#" data-target="html" class="scroll-to-target scroll-to-top"
@@ -402,8 +388,7 @@ Yeni kontrat imzalanmamış ancak taşınmazı rezerve etmiş ise; rezerve edild
     <script src="assets/vendors/wow/wow.js"></script>  
     <script src="assets/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
-     <script src="assets/js/modernizr.js"></script></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="assets/js/modernizr.js"></script>
     <script src="assets/js/entox.js"></script>
   </body>
 </html>
