--- a/public/hesabim.html
+++ b/public/hesabim.html
@@ -10,21 +10,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/images/favicons/apple-touch-icon.png"
+      href="https://tasmahal.s3.eu-north-1.amazonaws.com/favicons/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/images/favicons/favicon-32x32.png"
+      href="https://tasmahal.s3.eu-north-1.amazonaws.com/favicons/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/images/favicons/favicon-16x16.png"
+      href="https://tasmahal.s3.eu-north-1.amazonaws.com/favicons/favicon-16x16.png"
     />
-    <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
+    <link rel="manifest" href="https://tasmahal.s3.eu-north-1.amazonaws.com/favicons/site.webmanifest" />
 
     <!-- fonts -->
 
@@ -84,8 +84,8 @@
     <link rel="stylesheet" href="assets/vendors/timepicker/timePicker.css" />
 
 
-    <link rel="apple-touch-icon" href="assets/images/favicon.png" />
-    <link rel="shortcut icon" href="assets/images/favicon.ico" />
+    <link rel="apple-touch-icon" href="https://tasmahal.s3.eu-north-1.amazonaws.com/favicon.png" />
+    <link rel="shortcut icon" href="https://tasmahal.s3.eu-north-1.amazonaws.com/favicon.ico" />
 
     <!-- Google Font (font-family: 'Open Sans', sans-serif;) -->
     <link
@@ -121,7 +121,7 @@
             <div class="main-menu-wrapper__left">
               <div class="main-menu-wrapper__logo">
                 <a href="index.html"
-                  ><img src="assets/images/resources/logo-1.svg" alt=""
+                  ><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/resources/logo-1.svg" alt=""
                 /></a>
               </div>
               <div class="main-menu-wrapper__main-menu">
@@ -136,7 +136,7 @@
                   <li><a href="hakkimizda.html">Hakkımızda</a></li>
                   <li><a href="iletisim.html">İletişim</a></li>
                     <!-- <a href="#" class="phone-icon"
-                      ><img src="./assets/images/resources/phone.svg" alt="" />
+                      ><img src="./https://tasmahal.s3.eu-north-1.amazonaws.com/resources/phone.svg" alt="" />
                       +90 (516) 166 78 18</a
                     > -->
                   </li>
@@ -144,10 +144,10 @@
               </div>
             </div>
             <div class="main-menu-wrapper__right">
-              <div class="main-menu-wrapper__search-box-cart-box"></div>
+              
               <div class="main-menu-wrapper__btn-box">
-                <a href="hesabim.html" class="giris-button" id="login-button">Kaan Doğan</a>
-                <a href="#" class="thm-btn main-menu-wrapper__btn" id="logout-button">Çıkış Yap</a>
+                <a href="hesabim.html" class="giris-button" id="giris-button">Kaan Doğan</a>
+                <a href="giris.html" class="thm-btn main-menu-wrapper__btn">Çıkış Yap</a>
               </div>
             </div>
           </div>
@@ -163,10 +163,10 @@
 
 
   <!--Page Header Start-->
-      <section
+       <section
         class="page-header page-header2"
         style="
-          background-image: url(assets/images/backgrounds/page-header-bg.jpg);
+          background-image: url(https://tasmahal.s3.eu-north-1.amazonaws.com/backgrounds/page-header-bg.jpg);
         "
       >
         <div class="container">
@@ -393,7 +393,7 @@
         <div
           class="site-footer-bg"
           style="
-            background-image: url(assets/images/backgrounds/site-footer-bg.jpg);
+            background-image: url(https://tasmahal.s3.eu-north-1.amazonaws.com/backgrounds/site-footer-bg.jpg);
           "
         ></div>
         <div class="container">
@@ -407,7 +407,7 @@
                 <div
                   class="footer-widget__column footer-widget__explore clearfix"
                 >
-                  <h3 class="footer-widget__title">Hakkımızda</h3>
+                  <h3 class="footer-widget__title"><a href="hakkimizda.html">Hakkımızda</a></h3>
                   <ul
                     class="footer-widget__explore-list footer-widget__explore-list-width list-unstyled"
                   >
@@ -428,7 +428,7 @@
                 <div
                   class="footer-widget__column footer-widget__explore clearfix"
                 >
-                  <h3 class="footer-widget__title">Villalar</h3>
+                  <h3 class="footer-widget__title"><a href="villalar.html">Villalar</a></h3>
                  <ul
                     class="footer-widget__explore-list footer-widget__explore-list-width list-unstyled"
                   >
@@ -447,7 +447,7 @@
                 data-wow-delay="400ms"
               >
                 <div class="footer-widget__column footer-widget__contact">
-                  <h3 class="footer-widget__title">İletişim</h3>
+                 <h3 class="footer-widget__title"><a href="iletisim.html">İletişim</a></h3>
                   <ul class="list-unstyled footer-widget__contact-list">
                     <li>
                       <div class="icon">
@@ -472,8 +472,8 @@
                       </div>
                       <div class="text">
                         <p>
-                          <a href="mailto:info@izniktasmahal.com.tr"
-                            >info@izniktasmahal.com.tr</a
+                          <a href="mailto:info@villavillage.tr"
+                            >info@villavillage.tr</a
                           >
                         </p>
                       </div>
@@ -481,7 +481,7 @@
                     <li>
                       <div class="icon">
                         <span class="footer-phone">
-                          <img src="./assets/images/favicons/footer-phone.svg" alt="" />
+                          <img src="./https://tasmahal.s3.eu-north-1.amazonaws.com/favicons/footer-phone.svg" alt="" />
                         </span>
                       </div>
                       <div class="text">
@@ -517,7 +517,7 @@
                     
                   </div>
                   <p class="site-footer-bottom__copy-right">
-                    © Taş Mahal  İznik 2025 Her Hakkı Saklıdır
+                    © Villa Village  İznik 2025 Her Hakkı Saklıdır
                   </p>
                 </div>
               </div>
