--- a/public/hesabim.html
+++ b/public/hesabim.html
@@ -356,7 +356,7 @@
                                                    </label>
                                             </div>
                                             <div class="tm-form-field">
-                                                <button type="submit" class="tm-button">Güncelle <b></b></button>
+                                                <button type="button" class="tm-button" id="update-user-button">Güncelle <b></b></button>
                                             </div>
                                         </div>
                                     </form>
