--- a/public/hakkimizda.html
+++ b/public/hakkimizda.html
@@ -106,7 +106,7 @@
               
               <div class="main-menu-wrapper__btn-box">
                 <a href="giris.html" class="giris-button">Giriş</a>
-                <a href="giris.html" class="thm-btn main-menu-wrapper__btn">Kaydol</a>
+                <a href="giris.html" class="thm-btn main-menu-wrapper__btn kaydol-button">Kaydol</a>
               </div>
             </div>
           </div>
