--- a/public/elbeyli-waterfall.html
+++ b/public/elbeyli-waterfall.html
@@ -102,8 +102,8 @@
             <div class="main-menu-wrapper__right">
               
               <div class="main-menu-wrapper__btn-box">
-                <a href="giris.html" class="giris-button">Giriş</a>
-                <a href="giris.html" class="thm-btn main-menu-wrapper__btn kaydol-button">Kaydol</a>
+                <a href="giris.html" class="giris-button"></a>
+                <a href="giris.html" class="thm-btn main-menu-wrapper__btn kaydol-button"></a>
               </div>
             </div>
           </div>
