--- a/public/fethiye-3+1.html
+++ b/public/fethiye-3+1.html
@@ -132,8 +132,8 @@
             <div class="main-menu-wrapper__right">
               
               <div class="main-menu-wrapper__btn-box">
-                <a href="giris.html" class="giris-button"></a>
-                <a href="giris.html" class="thm-btn main-menu-wrapper__btn kaydol-button"></a>
+                <a href="giris.html" class="giris-button">Giriş</a>
+                <a href="giris.html" class="thm-btn main-menu-wrapper__btn kaydol-button">Kaydol</a>
               </div>
             </div>
           </div>
