--- a/public/faq.html
+++ b/public/faq.html
@@ -126,8 +126,8 @@
             <div class="main-menu-wrapper__right">
               
               <div class="main-menu-wrapper__btn-box">
-                <a href="giris.html" class="giris-button">Giriş</a>
-                <a href="giris.html" class="thm-btn main-menu-wrapper__btn kaydol-button">Kaydol</a>
+                <a href="giris.html" class="giris-button" id="name">Giriş</a>
+                <a href="giris.html" class="thm-btn main-menu-wrapper__btn kaydol-button" id="surname">Kaydol</a>
               </div>
             </div>
           </div>
