--- a/public/elbeyli-waterfall.html
+++ b/public/elbeyli-waterfall.html
@@ -103,7 +103,7 @@
               
               <div class="main-menu-wrapper__btn-box">
                 <a href="giris.html" class="giris-button" id="name">Giriş</a>
-                <a href="giris.html" class="thm-btn main-menu-wrapper__btn kaydol-button" id="surname">Kaydol</a>
+                <a href="giris.html" class="thm-btn main-menu-wrapper__btn kaydol-button" id="logout-button">Kaydol</a>
               </div>
             </div>
           </div>
