--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
             <div class="main-menu-wrapper__right">
               
               <div class="main-menu-wrapper__btn-box">
-                <a href="giris.html" class="giris-button" id="name">Giriş</a>
+                <a href="hesabim.html" class="giris-button" id="giris-button">Kaan Doğan</a>
                 <a href="giris.html" class="thm-btn main-menu-wrapper__btn kaydol-button" id="logout-button">Kaydol</a>
               </div>
             </div>
