--- a/public/giris.html
+++ b/public/giris.html
@@ -131,7 +131,7 @@
             <div class="main-menu-wrapper__right">
               
               <div class="main-menu-wrapper__btn-box">
-                <a href="hesabim.html" class="giris-button" id="giris-button">Kaan Doğan</a>
+                <a href="hesabim.html" class="giris-button" id="giris-button">Giriş</a>
                 <a href="giris.html" class="thm-btn main-menu-wrapper__btn kaydol-button" id="logout-button">Kaydol</a>
               </div>
             </div>
