--- a/public/giris.html
+++ b/public/giris.html
@@ -216,7 +216,7 @@
      data-client_id="http://642889385801-rsts3vsdgfoetjr8h0qq812v8h3n1hr8.apps.googleusercontent.com/"
      data-context="use"
      data-ux_mode="popup"
-     data-login_uri="http://localhost:5000"
+     data-login_uri="https://tasmahal-6815c3bd3574.herokuapp.com"
      data-auto_prompt="false">
 </div>
 
